# YT88Test

./: CMakeLists.txt  Readme.md
doc/: 开发文档.chm
src/: Config.h  DialogFunction.cpp  DialogFunction.h  KeyDef.h  SoftkeyYT88.cpp  SoftkeyYT88.h  UKey.h  USBDeviceEventFilter.cpp  USBDeviceEventFilter.h  WindowKeyReadWrite.cpp  WindowKeyReadWrite.h  WindowReadWrite.cpp  WindowReadWrite.h  dialog.ui  hidpi.h  hidsdi.h  main.cpp  sm3.cpp  sm3.h
